# adaptive-rag-chatbot

./: .gitignore  README.md  docker-compose.yml  requirements.txt  vercel.json
backend/: .env.example  Dockerfile  alembic.ini  config.py  ingestion.py  logging_config.py  main.py  memory.py  pyproject.toml  requirements.txt  schemas.py  vectorstore.py
backend/alembic/: env.py
backend/alembic/versions/: 3f9782cbf19b_init.py
backend/app/: main.py
backend/app/agents/: orchestrator.py
backend/app/api/v1/routes/: chat.py  health.py  tools.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  conversation.py  memory.py  message.py  tool_log.py  user.py
backend/app/integrations/search/: base.py  tavily_client.py
backend/app/llm/: prompts.py  provider.py  types.py
backend/app/repositories/: memory_repository.py
backend/app/schemas/: chat.py  tool.py
backend/app/services/: chat_service.py  memory_service.py
backend/app/tools/: base.py  memory_tool.py  search_tool.py
backend/graph/: graph_builder.py  state.py
frontend/: app.py  index.html  main.js  package-lock.json  package.json  styles.css  tailwind.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/[conversationId]/: page.tsx
frontend/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  MessageList.tsx
frontend/components/sidebar/: Sidebar.tsx
frontend/lib/api/: chat.ts  client.ts
frontend/lib/hooks/: useChat.ts  useHealth.ts
frontend/lib/types/: chat.ts
(+1 files in other folders)
